# orderbook-snapshot-autoencoder

./: .env.example  .gitignore  integration.py  presets.json  requirements.txt  setup.cfg  train.py
orderbook_snapshot_autoencoder/: ae_trainer.py  integration.py  pca_processor.py  presets.json  train.py
src/: ae_trainer.py  data_processor.py  trainer.py
