[metadata]
name = orderbook-snapshot-autoenoder
version = 0.1.0
author = Yuto Hayashi
url = https://github.com/YutoHayashi/orderbook-snapshot-autoencoder
licence = MIT

[options]
packages = 
    orderbook_snapshot_autoencoder
python_requires = ==3.11.*
include_package_data = True
install_requires =
    lightning
    numpy<2
    pandas
    pytorch-forecasting
    scikit-learn
    torch

[options.entry_points]
console_scripts =
    train-autoencoder = orderbook_snapshot_autoencoder.train:main